Group management code partially added to the web app. Minor changes.
Signed-off-by: Alberto García <garcia.estevez.alberto@gmail.com>

--- a/GCMServer/src/main/resources/templates/Groups.html
+++ b/GCMServer/src/main/resources/templates/Groups.html
@@ -33,8 +33,8 @@
 		<ul class="nav navbar-nav">
 			<li><a href="#" th:href="@{/Notification/}">Downstream</a></li>
 			<li><a href="#">Upstream</a></li>
-			<li><a href="#" th:href="@{/Groups/}">Groups</a></li>
-			<li class="active"><a href="#" th:href="@{/Topics/}">Topics</a></li>
+			<li class="active"><a href="#" th:href="@{/Groups/}">Groups</a></li>
+			<li><a href="#" th:href="@{/Topics/}">Topics</a></li>
 			<li><a href="#" th:href="@{/deviceManagement/}">Devices</a></li>
 			<li class="divider-vertical"></li>
 			<li><a href="#">Settings</a></li>
