--- a/GCMServer/src/main/resources/templates/Devices.html
+++ b/GCMServer/src/main/resources/templates/Devices.html
@@ -24,7 +24,7 @@
 		<ul class="nav navbar-nav">
 			<li><a href="#" th:href="@{/Notification/}">Downstream</a></li>
 			<li><a href="#">Upstream</a></li>
-			<li><a href="#">Groups</a></li>
+			<li><a href="#" th:href="@{/Groups/}">Groups</a></li>
 			<li><a href="#" th:href="@{/Topics/}">Topics</a></li>
 			<li class="active"><a href="#" th:href="@{/deviceManagement/}">Devices</a></li>
 			<li class="divider-vertical"></li>
