--- a/GCMServer/src/main/resources/templates/Groups.html
+++ b/GCMServer/src/main/resources/templates/Groups.html
@@ -48,12 +48,23 @@
 			<h3>Add Group</h3>
 			<form id="form_register_group" class="form-inline" role="form"
 				action="#" th:action="@{/Groups/registerGroup}"
-				th:object="${newGroup}" method="get">
+				th:object="${newGroup}" method="post">
 				<div class="form-group required">
-					<label for="input_group_notification_key" class="control-label">Group
-						notification_key </label> <input type="text" class="form-control"
-						id="input_group_notification_key"
-						placeholder="group notification_key" required="" th:field="*{id}"></input>
+					<label for="input_group_notification_key_name"
+						class="control-label">Group</label> <input type="text"
+						class="form-control" id="input_group_notification_key_name"
+						placeholder="group name" required=""
+						th:field="*{notificationKeyName}"></input>
+				</div>
+				<div class="form-group required">
+					<label for="input_group_registrationIds" class="control-label">Targets
+					</label> <select class="form-control" id="input_group_notification_key"
+						required="" multiple="multiple" th:field="*{regIds}">
+						<option value="">Select one...</option>
+						<option th:each="device : ${deviceList}"
+							th:value="${device.registrationId}" th:text="${device.name}"
+							value="Uno">Uno</option>
+					</select>
 				</div>
 				<input type="submit" class="btn btn-default" value="Send"></input> <input
 					type="reset" class="btn btn-default" value="Clear"></input>
@@ -63,18 +74,20 @@
 				action="#" th:action="@{/Groups/registerDeviceInGroup}"
 				th:object="${newGroup}" method="post">
 				<div class="form-group required">
-					<label for="input_group_notification_key" class="control-label">Group
-						notification_key </label> <select class="form-control"
-						id="input_group_notification_key" required="" th:field="*{id}">
+					<label for="input_group_notification_key_name2"
+						class="control-label">Group</label> <select class="form-control"
+						id="input_group_notification_key_name2" required=""
+						th:field="*{notificationKey}">
 						<option value="">Select one...</option>
-						<option th:each="group : ${groupList}" th:value="${group.id}"
-							th:text="${group.id}" value="Uno">Uno</option>
+						<option th:each="group : ${groupList}"
+							th:value="${group.notificationKey}"
+							th:text="${group.notificationKeyName}" value="Uno">Uno</option>
 					</select>
 				</div>
 				<div class="form-group required">
 					<label for="input_group_registrationIds" class="control-label">Targets
 					</label> <select class="form-control" id="input_group_notification_key"
-						required="" th:field="*{regIds}">
+						required="" th:field="*{regIds}" multiple="multiple">
 						<option value="">Select one...</option>
 						<option th:each="device : ${deviceList}"
 							th:value="${device.registrationId}" th:text="${device.name}"
@@ -95,17 +108,18 @@
 				</thead>
 				<tbody>
 					<tr th:each="group : ${groupList}" th:inline="text">
-						<td>[[${group.id}]]</td>
+						<td>[[${group.notificationKeyName}]]</td>
 						<td>
 							<ul>
-								<li th:each="regId : ${group.registrationIdList}">[[${regId}]] <a
-									href="#"
-									th:href="@{/Groups/unregisterDeviceFromGroup(id=${group.id},regId=${regId})}"><i
-										class="fa fa-remove"></i></a></li>
+								<li th:each="regId : ${group.registrationIdList}">[[${regId.name}]]
+									<a href="#"
+									th:href="@{/Groups/unregisterDeviceFromGroup(notificationKeyName=${group.notificationKeyName},notificationKey=${group.notificationKey},regIdName=${regId.name},regId=${regId.value})}"><i
+										class="fa fa-remove"></i></a>
+								</li>
 							</ul>
 						</td>
 						<td><a href="#"
-							th:href="@{/Groups/unregisterGroup(id=${group.id})}"
+							th:href="@{/Groups/unregisterGroup(notificationKey=${group.notificationKey},notificationKeyName=${group.notificationKeyName})}"
 							class="btn btn-default btn-sm">Remove group</a></td>
 					</tr>
 				</tbody>
