Logic to send group downstream messages added to the web app Minor changes in other classes
Signed-off-by: Alberto García <garcia.estevez.alberto@gmail.com>

--- a/GCMServer/src/main/resources/templates/Notifications.html
+++ b/GCMServer/src/main/resources/templates/Notifications.html
@@ -516,16 +516,16 @@
 							<div class="panel-group" id="accordion" role="tablist"
 								aria-multiselectable="true">
 								<div class="panel panel-default">
-									<div class="panel-heading" role="tab" id="headingOne">
+									<div class="panel-heading" role="tab" id="headingThree">
 										<h4 class="panel-title">
 											<a role="button" data-toggle="collapse"
-												data-parent="#accordion" href="#collapseOne"
-												aria-expanded="true" aria-controls="collapseOne">
+												data-parent="#accordion" href="#collapseThree"
+												aria-expanded="true" aria-controls="collapseThree">
 												Notification </a>
 										</h4>
 									</div>
-									<div id="collapseOne" class="panel-collapse collapse in"
-										role="tabpanel" aria-labelledby="headingOne">
+									<div id="collapseThree" class="panel-collapse collapse in"
+										role="tabpanel" aria-labelledby="headingThree">
 										<div class="panel-body">
 											<div class="form-group">
 												<label for="input_notification"
@@ -617,20 +617,20 @@
 									</div>
 								</div>
 								<div class="panel panel-default">
-									<div class="panel-heading" role="tab" id="headingTwo">
+									<div class="panel-heading" role="tab" id="headingFour">
 										<h4 class="panel-title">
 											<a class="collapsed" role="button" data-toggle="collapse"
-												data-parent="#accordion" href="#collapseTwo"
-												aria-expanded="false" aria-controls="collapseTwo"> Data
+												data-parent="#accordion" href="#collapseFour"
+												aria-expanded="false" aria-controls="collapseFour"> Data
 											</a>
 										</h4>
 									</div>
-									<div id="collapseTwo" class="panel-collapse collapse"
-										role="tabpanel" aria-labelledby="headingTwo">
+									<div id="collapseFour" class="panel-collapse collapse"
+										role="tabpanel" aria-labelledby="headingFour">
 										<div class="panel-body">
 											<div class="form-group">
 												<div class="col-lg-12" style="height: 300px;"
-													id="dataEditorTopicMEssage"></div>
+													id="dataEditorTopicMessage"></div>
 												<div class="col-lg-offset-4 col-lg-8">
 													<button id="btn_clear_dataEditor" type="button"
 														class="btn btn-default">Clear data</button>
@@ -663,22 +663,21 @@
 					<div role="tabpanel" class="tab-pane" id="group_message">
 						<h2>Group message</h2>
 						<p>From to create a GCM group message for multiple devices
-							included in a group</p>
-						<form id="form_http_json_multi" class="form-horizontal"
-							role="form" action="#"
-							th:action="@{/Notification/notificationHttpJsonMulti}"
-							th:object="${messageJsonMulti}" method="post">
-							<h3>Target</h3>
+							included in the group</p>
+						<form id="form_group_message" class="form-horizontal" role="form"
+							action="#" th:action="@{/Notification/groupMessage}"
+							th:object="${messageGroup}" method="post">
+							<h3>Target Group</h3>
 							<div class="form-group required">
-								<label for="input_registration_ids"
-									class="col-lg-4 control-label">registration_ids</label>
+								<label for="input_notification_key"
+									class="col-lg-4 control-label">to</label>
 								<div class="col-lg-8">
-									<select class="form-control" id="input_registration_ids"
-										required="" multiple="" th:field="*{listTargets}">
+									<select class="form-control" id="input_notification_key"
+										required="" th:field="*{target}">
 										<option value="">Select one...</option>
-										<option th:each="device : ${deviceList}"
-											th:value="${device.registrationId}" th:text="${device.name}"
-											value="Uno">Uno</option>
+										<option th:each="group : ${groupList}"
+											th:value="${group.notificationKey}"
+											th:text="${group.notificationKeyName}" value="Uno">Uno</option>
 									</select>
 								</div>
 							</div>
@@ -758,18 +757,141 @@
 								</div>
 							</div>
 							<h3>Payload</h3>
-							<div class="form-group">
-								<label for="input_payload_notification"
-									class="col-lg-4 control-label">notification</label>
-								<div class="col-lg-8">
-									<textarea class="form-control" rows="3"
-										id="input_payload_notification"></textarea>
+							<div class="panel-group" id="accordion" role="tablist"
+								aria-multiselectable="true">
+								<div class="panel panel-default">
+									<div class="panel-heading" role="tab" id="headingFive">
+										<h4 class="panel-title">
+											<a role="button" data-toggle="collapse"
+												data-parent="#accordion" href="#collapseFive"
+												aria-expanded="true" aria-controls="collapseFive">
+												Notification </a>
+										</h4>
+									</div>
+									<div id="collapseFive" class="panel-collapse collapse in"
+										role="tabpanel" aria-labelledby="headingFive">
+										<div class="panel-body">
+											<div class="form-group">
+												<label for="input_notification"
+													class="col-lg-4 control-label">Enable notification</label>
+												<div class="col-lg-8">
+													<div class="checkbox">
+														<label> <input type="checkbox"
+															id="input_notification" th:field="*{enableNotification}"></input>Check
+															/ Uncheck
+														</label>
+													</div>
+												</div>
+											</div>
+											<div class="form-group required">
+												<label for="input_notification_title"
+													class="col-lg-4 control-label">title</label>
+												<div class="col-lg-8">
+													<input type="text" class="form-control"
+														id="input_notification_title" placeholder="title"
+														th:field="*{notification[title]}" required=''
+														th:disabled="*{!enableNotification}"></input>
+												</div>
+											</div>
+											<div class="form-group">
+												<label for="input_notification_body"
+													class="col-lg-4 control-label">body</label>
+												<div class="col-lg-8">
+													<input type="text" class="form-control"
+														id="input_notification_body" placeholder="body"
+														th:field="*{notification[body]}"
+														th:disabled="*{!enableNotification}"></input>
+												</div>
+											</div>
+											<div class="form-group required">
+												<label for="input_notification_icon"
+													class="col-lg-4 control-label">icon</label>
+												<div class="col-lg-8">
+													<input type="text" class="form-control"
+														id="input_notification_icon" placeholder="icon"
+														th:field="*{notification[icon]}"
+														th:disabled="*{!enableNotification}"></input>
+												</div>
+											</div>
+											<div class="form-group">
+												<label for="input_notification_sound"
+													class="col-lg-4 control-label">sound</label>
+												<div class="col-lg-8">
+													<input type="text" class="form-control"
+														id="input_notification_sound" placeholder="sound"
+														th:field="*{notification[sound]}"
+														th:disabled="*{!enableNotification}"></input>
+												</div>
+											</div>
+											<div class="form-group">
+												<label for="input_notification_tag"
+													class="col-lg-4 control-label">tag</label>
+												<div class="col-lg-8">
+													<input type="text" class="form-control"
+														id="input_notification_tag" placeholder="tag"
+														th:field="*{notification[tag]}"
+														th:disabled="*{!enableNotification}"></input>
+												</div>
+											</div>
+											<div class="form-group">
+												<label for="input_notification_color"
+													class="col-lg-4 control-label">color</label>
+												<div class="col-lg-8">
+													<div class="input-group demo2">
+														<input type="text" class="form-control"
+															id="input_notification_color" placeholder="color #rrggbb"
+															th:field="*{notification[color]}"
+															th:disabled="*{!enableNotification}"></input> <span
+															class="input-group-addon"><i></i></span>
+													</div>
+												</div>
+											</div>
+											<div class="form-group">
+												<label for="input_notification_click_action"
+													class="col-lg-4 control-label">click_action</label>
+												<div class="col-lg-8">
+													<input type="text" class="form-control"
+														id="input_notification_click_action"
+														placeholder="click_action"
+														th:field="*{notification[clickAction]}"
+														th:disabled="*{!enableNotification}"></input>
+												</div>
+											</div>
+										</div>
+									</div>
 								</div>
-							</div>
-							<div class="form-group">
-								<label for="input_payload_data" class="col-lg-4 control-label">data</label>
-								<div class="col-lg-8">
-									<textarea class="form-control" rows="3" id="input_payload_data"></textarea>
+								<div class="panel panel-default">
+									<div class="panel-heading" role="tab" id="headingSix">
+										<h4 class="panel-title">
+											<a class="collapsed" role="button" data-toggle="collapse"
+												data-parent="#accordion" href="#collapseSix"
+												aria-expanded="false" aria-controls="collapseSix"> Data
+											</a>
+										</h4>
+									</div>
+									<div id="collapseSix" class="panel-collapse collapse"
+										role="tabpanel" aria-labelledby="headingSix">
+										<div class="panel-body">
+											<div class="form-group">
+												<div class="col-lg-12" style="height: 300px;"
+													id="dataEditorGroupMessage"></div>
+												<div class="col-lg-offset-4 col-lg-8">
+													<button id="btn_clear_dataEditor" type="button"
+														class="btn btn-default">Clear data</button>
+													<button id="btn_save_dataEditor" type="button"
+														class="btn btn-default">Save data</button>
+												</div>
+											</div>
+											<div class="form-group">
+												<label for="input_payload_data"
+													class="col-lg-12 control-label">Preview plain text</label>
+												<div class="col-lg-12">
+													<textarea class="form-control" rows="3"
+														id="input_payload_data" th:field="*{data}"></textarea>
+												</div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="form-group">
